--- a/rules/base-custom.yml
+++ b/rules/base-custom.yml
@@ -148,6 +148,7 @@ rules:
   lines-around-comment: [error, {allowBlockStart: true}]
   max-depth: off
   max-len: off
+  max-lines: off
   max-nested-callbacks: off
   max-params: off
   max-statements: off
@@ -162,6 +163,7 @@ rules:
   no-continue: off
   no-inline-comments: error
   no-lonely-if: off
+  no-mixed-operators: off
   #no-mixed-spaces-and-tabs: error
   no-multiple-empty-lines: [error, {max: 2, maxEOF: 1}]
   no-negated-condition: off
@@ -175,6 +177,7 @@ rules:
   no-underscore-dangle: [error, {allowAfterThis: true}]
   no-unneeded-ternary: error
   no-whitespace-before-property: error
+  object-curly-newline: [error, {multiline: true}]
   object-curly-spacing: error
   object-property-newline: off
   one-var: off
@@ -224,6 +227,7 @@ rules:
   prefer-spread: error
   prefer-template: error
   require-yield: off
+  rest-spread-spacing: error
   sort-imports: off
   template-curly-spacing: error
   yield-star-spacing: [error, before]
