--- a/rules/base-custom.yml
+++ b/rules/base-custom.yml
@@ -151,8 +151,9 @@ rules:
   max-lines: off
   max-nested-callbacks: off
   max-params: off
-  max-statements: off
   max-statements-per-line: off
+  max-statements: off
+  multiline-ternary: off
   new-cap: error
   new-parens: error
   newline-after-var: off
