update rules of eslint v3.2.0

--- a/rules/base-custom.yml
+++ b/rules/base-custom.yml
@@ -173,6 +173,7 @@ rules:
   no-plusplus: off
   no-restricted-syntax: off
   no-spaced-func: error
+  no-tabs: off
   no-ternary: off
   no-trailing-spaces: error
   no-underscore-dangle: [error, {allowAfterThis: true}]
