--- a/rules/base-custom.yml
+++ b/rules/base-custom.yml
@@ -179,8 +179,8 @@ rules:
   no-underscore-dangle: [error, {allowAfterThis: true}]
   no-unneeded-ternary: error
   no-whitespace-before-property: error
-  object-curly-newline: [error, {multiline: true}]
-  object-curly-spacing: error
+  object-curly-newline: off
+  object-curly-spacing: [error, always]
   object-property-newline: off
   one-var: off
   one-var-declaration-per-line: off
