--- a/rules/node-custom.yml
+++ b/rules/node-custom.yml
@@ -9,5 +9,6 @@ rules:
   no-process-env: error
   no-process-exit: off
   no-restricted-modules: off
+  no-restricted-properties: off
   no-sync: off
 
