update rules of eslint v3.10.2

--- a/rules/base-custom.yml
+++ b/rules/base-custom.yml
@@ -87,6 +87,7 @@ rules:
   no-proto: error
   #no-redeclare: error
   no-return-assign: error
+  no-return-await: error
   no-script-url: error
   #no-self-assign: error
   no-self-compare: error
