--- a/rules/base-custom.yml
+++ b/rules/base-custom.yml
@@ -7,6 +7,7 @@ rules:
 
   ## Possible Errors
 
+  no-await-in-loop: error
   #no-cond-assign: error
   #no-console: error
   #no-constant-condition: error
