update rules of eslint v3.14.1

--- a/rules/base.custom.yml
+++ b/rules/base.custom.yml
@@ -104,6 +104,7 @@ rules:
   no-void: off
   no-warning-comments: off
   no-with: error
+  prefer-promise-reject-errors: [error, {allowEmptyReject: true}]
   radix: error
   require-await: error
   vars-on-top: error
@@ -191,6 +192,7 @@ rules:
   no-lonely-if: off
   no-mixed-operators: off
   #no-mixed-spaces-and-tabs: error
+  no-multi-assign: error
   no-multiple-empty-lines: [error, {max: 2, maxEOF: 1}]
   no-negated-condition: off
   no-nested-ternary: error
