--- a/rules/base.yml
+++ b/rules/base.yml
@@ -1,7 +1,7 @@
 ---
 rules:
 
-  ## based on eslint v3.13.1
+  ## based on eslint v3.14.1
   ## Comment out all the recommended rules with '#'
   ## Comment out all the externally defined rules with '###'
 
@@ -104,6 +104,7 @@ rules:
   no-void: off
   no-warning-comments: off
   no-with: off
+  prefer-promise-reject-errors: off
   radix: off
   require-await: off
   vars-on-top: off
@@ -191,6 +192,7 @@ rules:
   no-lonely-if: off
   no-mixed-operators: off
   #no-mixed-spaces-and-tabs: error
+  no-multi-assign: off
   no-multiple-empty-lines: off
   no-negated-condition: off
   no-nested-ternary: off
