--- a/rules/base.yml
+++ b/rules/base.yml
@@ -1,7 +1,7 @@
 ---
 rules:
 
-  ## based on eslint v3.14.1
+  ## based on eslint v3.15.0
   ## Comment out all the recommended rules with '#'
   ## Comment out all the externally defined rules with '###'
 
@@ -226,6 +226,7 @@ rules:
   space-infix-ops: off
   space-unary-ops: off
   spaced-comment: off
+  template-tag-spacing: off
   unicode-bom: off
   wrap-regex: off
 
