update rules: no-extra-parens

--- a/rules/base.custom.yml
+++ b/rules/base.custom.yml
@@ -21,7 +21,7 @@ rules:
   #no-empty-character-class: error
   #no-ex-assign: error
   #no-extra-boolean-cast: error
-  no-extra-parens: error
+  no-extra-parens: [error, all, {ignoreJSX: multi-line}]
   #no-extra-semi: error
   #no-func-assign: error
   #no-inner-declarations: error
