--- a/rules/base.custom.yml
+++ b/rules/base.custom.yml
@@ -3,7 +3,6 @@ rules:
 
   ## Custom settings of `base.yml`
   ## Comment out all the recommended rules with '#'
-  ## Comment out all the externally defined rules with '###'
 
   ## Possible Errors
 
@@ -153,7 +152,7 @@ rules:
   camelcase: error
   capitalized-comments: off
   comma-spacing: error
-  ###comma-dangle: off
+  comma-dangle: [error, never]
   comma-style: off
   computed-property-spacing: error
   consistent-this: off
@@ -165,7 +164,7 @@ rules:
   id-blacklist: off
   id-length: off
   id-match: off
-  ###indent: off
+  indent: [error, 2, {VariableDeclarator: {var: 2, let: 2, const: 3}}]
   jsx-quotes: off
   key-spacing: error
   keyword-spacing: error
@@ -218,7 +217,7 @@ rules:
   quote-props: off
   quotes: [error, single, {avoidEscape: true}]
   require-jsdoc: off
-  ###semi: off
+  semi: [error, always]
   semi-spacing: error
   sort-keys: off
   sort-vars: off
