--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "type": "git",
     "url": "https://github.com/arzyu/eslint-config-presets"
   },
+  "devDependencies": {
+    "lerna": "^2.0.0-rc.4"
+  },
   "keywords": [
     "eslint",
     "eslintconfig"
