--- a/packages/eslint-config-arzyu-angular/package.json
+++ b/packages/eslint-config-arzyu-angular/package.json
@@ -5,10 +5,12 @@
   "main": "index.yml",
   "dependencies": {
     "babel-eslint": "^7.2.3",
-    "eslint": "^3.19.0",
     "eslint-config-angular": "^0.5.0",
     "eslint-config-presets": "arzyu/eslint-config-presets#v1.0.0",
     "eslint-plugin-angular": "^2.4.0"
+  },
+  "peerDependencies": {
+    "eslint": "^3.19.0"
   },
   "repository": {
     "type": "git",
