--- a/packages/eslint-config-arzyu-nodejs/package.json
+++ b/packages/eslint-config-arzyu-nodejs/package.json
@@ -5,8 +5,10 @@
   "main": "index.yml",
   "dependencies": {
     "babel-eslint": "^7.2.3",
-    "eslint": "^3.19.0",
     "eslint-config-presets": "arzyu/eslint-config-presets#v1.0.0"
+  },
+  "peerDependencies": {
+    "eslint": "^3.19.0"
   },
   "repository": {
     "type": "git",
