update react rules

--- a/rules/react.custom.yml
+++ b/rules/react.custom.yml
@@ -1,3 +1,19 @@
 # vim: ft=yaml
 extends:
   - plugin:react/recommended
+
+rules:
+  class-methods-use-this:
+    - error
+    - exceptMethods:
+        - render
+        - getInitialState
+        - getDefaultProps
+        - getChildContext
+        - componentWillMount
+        - componentDidMount
+        - componentWillReceiveProps
+        - shouldComponentUpdate
+        - componentWillUpdate
+        - componentDidUpdate
+        - componentWillUnmount
