--- a/packages/eslint-config-arzyu-chrome/package.json
+++ b/packages/eslint-config-arzyu-chrome/package.json
@@ -14,6 +14,9 @@
     "type": "git",
     "url": "https://github.com/arzyu/eslint-config-presets"
   },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
+  },
   "keywords": [
     "eslint",
     "eslintconfig"
