--- a/rules/base.custom.yml
+++ b/rules/base.custom.yml
@@ -5,6 +5,7 @@ rules:
 
   ## Possible Errors
 
+  for-direction: error
   no-await-in-loop: error
   no-compare-neg-zero: error
   #no-cond-assign: error
@@ -134,6 +135,7 @@ rules:
   callback-return: off
   global-require: error
   handle-callback-err: [error, '^.*(e|E)rr(or)?$']
+  no-buffer-constructor: error
   no-mixed-requires: off
   no-new-require: off
   no-path-concat: off
@@ -145,7 +147,9 @@ rules:
 
   ## Stylistic Issues
 
+  array-bracket-newline: [error, {multiline: true}]
   array-bracket-spacing: error
+  array-element-newline: [error, {multiline: true}]
   block-spacing: [error, never]
   brace-style: error
   camelcase: error
@@ -170,7 +174,6 @@ rules:
   line-comment-position: error
   linebreak-style: off
   lines-around-comment: [error, {allowBlockStart: true}]
-  lines-around-directive: off
   max-depth: off
   max-len: off
   max-lines: off
@@ -181,8 +184,6 @@ rules:
   multiline-ternary: off
   new-cap: error
   new-parens: error
-  newline-after-var: off
-  newline-before-return: off
   newline-per-chained-call: off
   no-array-constructor: error
   no-bitwise: off
@@ -205,7 +206,7 @@ rules:
   no-unneeded-ternary: error
   no-whitespace-before-property: error
   nonblock-statement-body-position: error
-  object-curly-newline: off
+  object-curly-newline: [error, {consistent: true}]
   object-curly-spacing: [error, always, {arraysInObjects: false, objectsInObjects: false}]
   object-property-newline: off
   one-var: off
@@ -213,11 +214,21 @@ rules:
   operator-assignment: off
   operator-linebreak: off
   padded-blocks: [error, never]
+  padding-line-between-statements: [error,
+    {blankLine: always, prev: import, next: *},
+    {blankLine: any, prev: import, next: import},
+    {blankLine: always, prev: directive, next: *},
+    {blankLine: any, prev: directive, next: directive},
+    {blankLine: always, prev: *, next: return},
+    {blankLine: always, prev: [const, let], next: *},
+    {blankLine: any, prev: [const, let], next: [const, let]},
+  ]
   quote-props: off
   quotes: [error, double, {avoidEscape: true}]
   require-jsdoc: off
   semi: [error, always]
   semi-spacing: error
+  semi-style: error
   sort-keys: off
   sort-vars: off
   space-before-blocks: error
@@ -226,6 +237,7 @@ rules:
   space-infix-ops: error
   space-unary-ops: error
   spaced-comment: error
+  switch-colon-spacing: error
   template-tag-spacing: [error, always]
   unicode-bom: error
   wrap-regex: off
