--- a/packages/eslint-config-react/package.json
+++ b/packages/eslint-config-react/package.json
@@ -11,8 +11,7 @@
     "eslint-plugin-react-hooks": "^4.2.0"
   },
   "peerDependencies": {
-    "eslint": "^7.24.0",
-    "typescript": "^4.2.4"
+    "eslint": "^7.24.0"
   },
   "repository": {
     "type": "git",
